# trade

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  config.yaml  openapi.yml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/: zizmor.yml
.github/workflows/: ci.yml
.sqlx/: query-42901c8aed587b4bebbc18b32be089e55c694e1071449a4004a469a417c92dc8.json  query-4324661a0b2381774f23af8276ed068a267b770fc53f54ac99d999c6511bf662.json  query-52bb71dba3ed3b4f145929b911a162e40780ff3811034ab1636c3cebcb88df9d.json  query-535b9363ce931d9cfde029569edb65ad9905ec67432a69bb5fb0795ca76f8139.json  query-7c81443b1b28af00dba1316327791c0e112748613d5968f377eaff4827c91089.json  query-9e21df5472dff2b43077c58c606a055c94969e7e6e00a6eb687ffcc165a109fd.json  query-9f0d13d87bf3434280c2b5dcefe7948637dad53e2e2f08cc359fe8fc41d01049.json  query-a31a9a11ab5d416dab11a5b91dd7303bbb48ede2e353814bfb562562e7e22622.json  query-a6ea35e7bb452ca8524e82f4bc99f8346ee1bd8830d728a7ec668c5d83d00b30.json  query-a749f51a8ce8fd1eb1927a91157eee4feee1825345367b9530f446c9198e72c9.json  query-aa371b4fd4996fbdc37bf564f2693820fd8c1d7b0ec9ff98a4dd20db94dd2b0e.json  query-ab7f6de66a7a43a5760fde58775ddd96f0a808728d37d8fb3f717fe5ae7940bb.json  query-ab8f2573c25fc6e6d8a254eb721a254ce3ee8cdd02976c97e5382e2debf0dcf8.json  query-aced935351feadf9a67b60a2851bc4c0e2774ccc6e3648e0a97f67df9ec03d89.json  query-b7e185df3f0b80640d636526c5192ef94f9ad15a1dfca26e4f6e0b6e84482b06.json  query-e961ce0d2ff85cdcf01402879ae9898fe0835999110617d76d9c57cc59f64b7b.json  query-ed44cf11125837a40fb0b6ba3620afb509657c702db1e39ac228dbcde034c79e.json
crates/db/: Cargo.toml  build.rs
crates/db/sql/: init.sql
crates/db/src/: lib.rs
crates/hypertext/: Cargo.toml
crates/hypertext/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: axum_otel.rs  lib.rs  tracing_otel.rs
src/: admin.rs  auth.rs  db.rs  frontend.rs  hypertxt.rs  init.sql  integration.rs  lib.rs  main.rs  market.rs  order.rs  telemetry.rs  types.rs  user.rs
trade/: Cargo.toml  build.rs
trade/src/: admin.rs  auth.rs  db.rs  frontend.rs  init.sql  main.rs  market.rs  order.rs  telemetry.rs  types.rs  user.rs
