cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "trade"

authors = ["MNThomson"]
edition = "2024"
license = "AGPLv3"
repository = "https://github.com/MNThomson/trade"
version = "0.0.0"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-macros = { version = "0.5" }
chrono = { version = "0.4.39", features = ["serde"] }
fake = { version = "3.1", features = ["chrono", "derive", "ulid"] }
gethostname = "0.4"
headers = "0.4.0"
http = "1.1"
hypertext = { version = "0.5.2", features = ["axum"] }
jsonwebtoken = "9.3.0"
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["metrics", "tls-roots", "tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
rustc_version = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.33" }
sqlx = { version = "0.8", features = ["chrono", "macros", "runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.41", features = ["full"] }
tonic = "0.9"
tower-http = { version = "0.6", features = ["catch-panic", "trace"] }
tower-livereload.version = "0.9.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = { version = "0.22" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1.1.4", features = ["serde", "uuid"] }


[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
rusqlite.version = "0.32.1"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev-fast]
codegen-backend = "cranelift"
inherits = "dev"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
