[package]
name = "trade"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
db = { path = "../crates/db/" }
hypertext = { path = "../crates/hypertext/" }
telemetry = { path = "../crates/telemetry/" }

axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower-livereload.version = "0.9.5"
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
