[package]
name = "db"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sqlx = { version = "0.8", features = ["chrono", "macros", "runtime-tokio", "sqlite"] }

[build-dependencies]
rusqlite.version = "0.32.1"
